<resources>
    <string name="app_name">MapApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="go_to_map_fragment">Open Map</string>
    <string name="go_to_map_activity">Open A Map</string>
    <string name="fragment_text">Hello Fragment</string>
    <string name="country_list">Country Spinner</string>
    <string name="language_list">Language</string>
    <string name="user_guide_btn">User Guide</string>
    <string name="beez_card_btn">BeeZCard</string>
    <string name="focus_user_guide_btn">Focus User Guide</string>
    <string name="step_user_guide_btn">Step User Guide</string>
    <string name="skip_btn">Skip</string>
    <string name="show_case_btn_txt">ShowCase</string>
    <string name="dragg_btn_txt">Dragging</string>
    <string name="file_btn_txt">File Picker</string>
    <string name="coordinator_btn_txt">Coordinator</string>
    <string name="add_to_calendar">Add To My Calendar</string>

    <string name="card_recycler">Card Recycler</string>


    <!-- strings used in BeezServices -->
    <string name="beez_employee_onboarding"><b>Employee On-Boarding</b></string>
    <string name="beez_buro_modules"><b>BeeZ Buro Modules</b></string>
    <string name="beez_save"><b>Save</b></string>
    <string name="beez_full_name"><b>Full Name</b></string>
    <string name="beez_job">Job Title/ Position</string>
    <string name="beez_about">About</string>
    <string name="beez_about_description">Here the user brief bio will be shown</string>
    <string name="tags1_default_title">Projects</string>
    <string name="tag2_default_title">Expertise</string>
    <string name="beez_card_textview_grid1"># Tag 1</string>
    <string name="beez_card_textview_grid2"># Tag 2</string>
    <string name="beez_card_textview_grid3"># Tag 3</string>
    <string name="beez_user_photo">Photo of the user \n Goes Here</string>
    <string name="beez_expertise">Expertise</string>
    <string name="beez_projects">Projects</string>
    <string name="beez_smaple_name">Your Full Name</string>
    <string name="beez_sample_job">Job Title/Position</string>


    <string name="beez_congratulations_tip">You are all set. Time to meet \n and engage with your Colleagues.</string>
    <string name="beez_start_beezcovery">Start BeeZCovery</string>


    <string name="country_text">County</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
