<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/halfTransparent"
    android:clickable="true"
    tools:context=".Features.BeeZCard.BeeZCardGuideFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            style="@style/Widget.guide.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title=" "/>


    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@drawable/user_profile_pattern"
        app:layout_constraintDimensionRatio="H,4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_layout" />


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/uploadProfilePictureButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilePictureImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePictureImageView"
        fancy:fb_defaultColor="#693E4A59"
        fancy:fb_iconResource="@drawable/camera_icon"
        fancy:fb_radius="90dp"
        fancy:fb_text="" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.88"
        android:background="@drawable/custom_card_name_background"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilePictureImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/beez_smaple_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/jobTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textCapWords"
            android:text="@string/beez_sample_job"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <com.haipq.android.flagkit.FlagImageView
            android:id="@+id/flagView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/jobTitleTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/flag_us" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayouts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tag2Layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/aboutTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/beez_about_description"
                android:textSize="16sp"
                android:textColor="@color/DarkTextColor"
                android:lineSpacingMultiplier="1.2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/moreAboutText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/moreAboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkTextColor"
                android:text="More"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/aboutTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tag1Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/aboutLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.42">

            <TextView
                android:id="@+id/tag1TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags1_default_title"
                android:textColor="@color/DarkTextColor"
                android:textSize="15sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/tag11TextView"
                style="@style/BeeZCard.Tag1.TextView"
                android:text="# Tag 1"
                android:textColor="@color/beezprofessional"
                android:background="@drawable/beez_tag1_background"
                app:layout_constraintTop_toBottomOf="@+id/tag1TitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />

            <TextView
                android:id="@+id/tag12TextView"
                style="@style/BeeZCard.Tag1.TextView"
                android:text="#Tag 2 fdjvbad oadfbvoa oad f"
                android:textColor="@color/beezprofessional"
                android:background="@drawable/beez_tag1_background"
                app:layout_constraintTop_toBottomOf="@+id/tag11TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />

            <TextView
                android:id="@+id/tag13TextView"
                style="@style/BeeZCard.Tag1.TextView"
                android:text="#Tag 3 fjdba; dafbo fai"
                android:textColor="@color/beezprofessional"
                android:background="@drawable/beez_tag1_background"
                app:layout_constraintTop_toBottomOf="@+id/tag12TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tag2Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tag1Layout"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.42">

            <TextView
                android:id="@+id/tag2TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/tag2_default_title"
                android:textColor="@color/DarkTextColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tag21TextView"
                style="@style/BeeZCard.Tag1.TextView"
                android:background="@drawable/beez_tag2_background"
                android:text="# Tag 1 dvao "
                android:textColor="@color/beezsocial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag2TitleTextView" />

            <TextView
                android:id="@+id/tag22TextView"
                style="@style/BeeZCard.Tag1.TextView"
                android:background="@drawable/beez_tag2_background"
                android:text="# Tag 1 dbvjdv kj ajdf vo dafbv dfbvajd"
                android:textColor="@color/beezsocial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag21TextView" />

            <TextView
                android:id="@+id/tag23TextView"
                style="@style/BeeZCard.Tag1.TextView"
                android:background="@drawable/beez_tag2_background"
                android:text="# Tag 1 sodfsdb bcb"
                android:textColor="@color/beezsocial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag22TextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/skip_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />



</androidx.constraintlayout.widget.ConstraintLayout>